Modify the file sendmail.conf

--- a/sendmail.config
+++ b/sendmail.config
@@ -27,3 +27,13 @@ smtps='smtps://smtp.dominio:465'
 
 file='/home/user/sendmail/email.txt'
 
+# REMETENTE DO E-MAIL
+# # from='usuario@dominio.com'
+#
+from='usuario@dominio.com'
+
+# # DESTINATARIO DO E-MAIL
+# # for='usuario@dominio.com'
+
+for='usuario@dominio.com'
+
